--- a/Todooy/View/Base.lproj/Main.storyboard
+++ b/Todooy/View/Base.lproj/Main.storyboard
@@ -9,7 +9,46 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--ToDooy-->
+        <!--Todooy-->
+        <scene sceneID="YxK-GL-OEa">
+            <objects>
+                <tableViewController id="d2a-jd-srh" customClass="CategoryTableViewController" customModule="Todooy" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="9UK-14-mtO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" id="Ous-2b-XDb">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ous-2b-XDb" id="kws-GV-gCj">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.666666666666664"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="d2a-jd-srh" id="gks-E9-4WU"/>
+                            <outlet property="delegate" destination="d2a-jd-srh" id="8xD-xt-SYv"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Todooy" id="Evz-Kj-NPB">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Exc-YJ-ztn">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="d2a-jd-srh" id="4J2-tI-YIc"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="GKM-AO-t8f" kind="show" identifier="goToItems" id="f1n-8h-guN"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lsi-fW-5Fm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1066" y="139"/>
+        </scene>
+        <!--Items-->
         <scene sceneID="QSR-8M-p5v">
             <objects>
                 <tableViewController id="GKM-AO-t8f" customClass="TodoListViewController" customModule="Todooy" customModuleProvider="target" sceneMemberID="viewController">
@@ -40,7 +79,7 @@
                             <outlet property="delegate" destination="GKM-AO-t8f" id="dsl-Ue-vZ9"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="ToDooy" id="KtK-d2-F1P">
+                    <navigationItem key="navigationItem" title="Items" id="KtK-d2-F1P">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="7tt-Jv-evn">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
@@ -72,12 +111,12 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="GKM-AO-t8f" kind="relationship" relationship="rootViewController" id="Xqf-gc-s9q"/>
+                        <segue destination="d2a-jd-srh" kind="relationship" relationship="rootViewController" id="lF6-V5-pmg"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pps-UQ-2Cl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1048.8" y="138.91625615763547"/>
+            <point key="canvasLocation" x="348" y="139"/>
         </scene>
     </scenes>
 </document>
