Added theme support

--- a/Todooy/View/Base.lproj/Main.storyboard
+++ b/Todooy/View/Base.lproj/Main.storyboard
@@ -33,14 +33,22 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Todooy" id="Evz-Kj-NPB">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Exc-YJ-ztn">
-                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <connections>
-                                <action selector="addButtonPressed:" destination="d2a-jd-srh" id="4J2-tI-YIc"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="add" id="Exc-YJ-ztn">
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <action selector="addButtonPressed:" destination="d2a-jd-srh" id="4J2-tI-YIc"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="Item" id="LDZ-kX-653">
+                                <connections>
+                                    <action selector="barThemeButtonPressed:" destination="d2a-jd-srh" id="IsV-nl-5b4"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
+                        <outlet property="barThemeButton" destination="LDZ-kX-653" id="nzp-jS-VPk"/>
                         <segue destination="GKM-AO-t8f" kind="show" identifier="goToItems" id="f1n-8h-guN"/>
                     </connections>
                 </tableViewController>
